Fix image overlay with z-index

--- a/src/Footer.css
+++ b/src/Footer.css
@@ -31,3 +31,10 @@
   color: white;
   border: 3px solid #0282f9;
 }
+
+main,
+header,
+#bottom-footer {
+  position: relative;
+  z-index: 2;
+}
